feat(api/oidc): JWT support